--- a/Frontend/app/views/candidat/partiel/cog.html.erb
+++ b/Frontend/app/views/candidat/partiel/cog.html.erb
@@ -9,6 +9,6 @@
             <label></label>
             <label></label>
         </div>
-        <a class='main-button' href="cogmore">En voir plus</a>
+        <a class='main-button' href="cogmore">EN SAVOIR PLUS</a>
     </div>
 </main>
