--- a/Frontend/app/assets/stylesheets/partiel_resultat.scss
+++ b/Frontend/app/assets/stylesheets/partiel_resultat.scss
@@ -103,7 +103,19 @@
     /* Misc */
 }
 
+.default-label {
+    /* Positioning */
+    /* Box-model */
+    /* Typography */
+    /* Visual */
+    color: violet;
+    background-color: #6983A0;
+    border-radius: 100px;
+    /* Misc */
+}
+
 .menu {
+
     li:target>label {
         /* Positioning */
         /* Box-model */
@@ -113,6 +125,7 @@
         background-color: #6983A0;
         border-radius: 100px;
     }
+
     /* Misc */
 }
 
