--- a/Frontend/app/views/candidat/partiel_resultat.html.erb
+++ b/Frontend/app/views/candidat/partiel_resultat.html.erb
@@ -15,7 +15,7 @@
             </li>
             <li id="cog" data-turbolinks="false">
                 <a href="#cog" id='a_cog'>Agilité cognitive</a>
-                <label></label>
+                <label class="default-label"></label>
             </li>
             <li id="soc" data-turbolinks="false">
                 <a href="#soc"  id='a_soc'>Agilité Sociale</a>
