--- a/Frontend/app/assets/stylesheets/soc.scss
+++ b/Frontend/app/assets/stylesheets/soc.scss
@@ -93,6 +93,7 @@
     justify-self: center;
     min-width: vw_calc(300px);
     height: vh_calc(70px);
+    padding: 0 10px;
 
     /* Typography */
     font-style: normal;
