--- a/Frontend/app/assets/stylesheets/candidat_index.scss
+++ b/Frontend/app/assets/stylesheets/candidat_index.scss
@@ -486,6 +486,7 @@
     list-style: none;
     /* Visual */
     /* Misc */
+    &::-webkit-scrollbar { width: 0 !important }
 }
 
 .footer-menu-list>li {
