--- a/Frontend/app/views/candidat/partiel_profil.html.erb
+++ b/Frontend/app/views/candidat/partiel_profil.html.erb
@@ -56,14 +56,14 @@
                 <div class="main-description">Soyez logique et tout se passera bien !</div>
             </article>
             <article>
-                <section class="pich">
+                <section class="pitch">
                     <div class="main-logo"><label class="logo"></label></div>
                     <div class="main-option">
                         <div class="main-option-titre">Pitch video</div>
-                        <button id='working' class="main-option-button stretched-link">jouer</button>
+                        <button id='pitch' class="main-option-button stretched-link">jouer</button>
                         <div class="main-option-score">
-                        <% unless @profil_score['pich'].blank? %>
-                            <div>score</div><%=@profil_score['pich']%></div>
+                        <% unless @profil_score['pitch'].blank? %>
+                            <div>score</div><%=@profil_score['pitch']%></div>
                         <%end %>
                     </div>
                 </section>
