add equipe manager

--- a/Frontend/app/views/accueil/index.html.erb
+++ b/Frontend/app/views/accueil/index.html.erb
@@ -16,7 +16,7 @@
           Bienvenue sur abilitiz, veuillez choisir votre type d'utilisateur
         </p>
         <p>
-          <%= link_to "Recruteur", {controller: "accueil", action: "connectable"}, class: "btn btn-color1 my-2"%>
+          <%= link_to "Recruteur", {controller: "recruteur", action: "login"}, class: "btn btn-color1 my-2"%>
           <%= link_to "Candidat", {controller: "candidat", action: "connexion"}, class: "btn btn-color2 my-2" %>
         </p>
         <p>
