--- a/Frontend/app/views/layouts/application.html.erb
+++ b/Frontend/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <% @style_default = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= yield(:css) || @style_default %>
+    <% if content_for?(:css) %>
+      <%= yield(:css) %>
+    <% else %>
+      <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <% end %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
